The Leaves that are green.
Turn to brown.

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -920,14 +920,14 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.75.b:0 "Hunt down these terrorists! No Restains!."
   germany.75.c:0 "The terrorists are nowhere to be found."
 
-  germany.76.t:0 "Massive floods in Rhineland Palatine"
-  germany.76.d:0 ""
+  germany.76.t:0 "Massive floods in Rhineland Palatinate"
+  germany.76.d:0 "Consequences of a harsh storm a few days ago can now be seen in a region of Germany called Rhineland-Palatinate. In this region lies the heavily industrialised Ruhr valley. This valley is the heart of the German economy, and it is now partially flooded. Homes have been destroyed, factories have turned into ruins and infrastructure looks like it has seen a war, in and around the valley, access has been cut off from various cities such as Bonn, Cologne, Dusseldorf and many more towns and villages. The people and the local government have all asked for aid from the National Government, who is still discussing the matter."
   germany.76.a:0 "Help the effected with all possible means."
   germany.76.b:0 "Who is responsible for flood preventation in this district?."
   germany.76.c:0 "You know this reminds me of a joke *laughs*."
 
   germany.77.t:0 "Political Discussion ends in big brawl in Frankfurt"
-  germany.77.d:0 ""
+  germany.77.d:0 "Politicians descend into violence as a brawl breaks out as a few parties in the city of Frankfurt decided to gather and discuss some matters. However it quickly seemed they could never agree on anything. People assume this was because they all associate with different ideologies, and thus their ideas conflict. How this wasn’t thought of before the meeting took place is unknown. The police eventually intervened in the fighting and arrested all attending members who would be questioned individually How the fight exactly started is still unknown, but bystanders suspect it was because of the topic ‘Social Reform’, at which point one of the members threw an orange at another person in the room, thus starting a fight. The police have not yet issued a statement which says whether all members will be trialled, or only the ones that were fighting when the police entered."
   germany.77.a:0 "Lets hold another round."
   germany.77.b:0 "Just ban this kind of discussion panel for now."
   germany.77.c:0 "I hate politics."
