Kingdom Modifiers + VP for England

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -181,6 +181,16 @@
 
   PB_GER_Kiel_German_Unrest:0 "German Independence Movement"
 
+  PB_GER_Modifier_Rhineland_Unrest:0 "Unrest in Rhineland"
+  PB_GER_Modifier_Bavaria_Unrest:0 "Unrest in Bavaria"
+  PB_GER_Modifier_Saxony_Unrest:0 "Unrest in Saxony"
+  PB_GER_Modifier_Brandenburg_Unrest:0 "Unrest in Brandenburg"
+  PB_GER_Modifier_Frankfurt_Unrest:0 "Unrest in Frankfurt"
+  PB_GER_Modifier_Elsass_Unrest:0 "Unrest in Elsass"
+  PB_GER_Modifier_Hannover_Unrest:0 "Unrest in Hannover"
+  PB_GER_Modifier_Austria_Unrest:0 "Unrest in Austria"
+
+
   PB_GER_Rhineland_Unrest_Critical:0 "High Unrest in the Rhineland"
   PB_GER_Rhineland_Unrest_Moderate:0 "Moderate Unrest in the Rhineland"
   PB_GER_Rhineland_Unrest_Normal:0 "Normal Unrest in the Rhineland"
