French focus loc and event adjustments

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -793,15 +793,15 @@
   French_flavour.33.a:0 "The righteous wrath of an honorable man"
 
   French_flavour.34.t:0 "He Stands Alone"
-  French_flavour.34.d:0 ""
-  French_flavour.34.a:0 "All alone"
+  French_flavour.34.d:0 "My name is Ozymandius...\n\nThe sounds of war, once so filled with the promises of greatness and hope, filled the Parisian streets with treason and despair. The war had turned and France found itself cornered, its allies either fallen to the forces of the Empires or having betrayed the dreams of Greater France. Doriot could not ignore the hint of irony, reflecting on his speeches and ideals. A France of millennia, rivalling the great European empires of the Romans and the Habsburgs, yet it only lasted for a decade or less. He could not shake those ideas out of his head, as the sound of artillery and tripods came closer to the bunker.\n\nKing of Kings...\n\nThe end seemed closer than he'd imagine. If he had to believe the snakes of British and German radios, London had been calling for Doriot's head, emboldened by their eventual success against the great French spirit. It was perhaps only a matter of "when", not "if", before Doriot would be dragged before their courts, hanged like a pig for the world to spectate. Is that how he would be remembered? Like a body hanging from a rope and not the great leader he was?\n\nLook on my Works, Ye Mighty...\n\nDays passed and news did not improve. The situation on the ground seemed like an endless stream of failures. Treason was in the air, as Doriot emptied his bunker from people he once saw as allies. Last night he had an old military ally shot after he had played with the idea of bringing Doriot somewhere safe, outside of the Empire's reach. The treasonous thought of fleeing to Brazil was enough for Doriot to snap at him and order his death. Yet, thinking about it, Doriot could only conclude one thing. He had been right. It wasn't safe anymore, as it all had ended. France, his castle, had been torn down. The medicinal cabinet was still packed, despite supply problems, so Doriot made the choice. The last choice."
+  French_flavour.34.a:0 "...And Despair"
 
   French_flavour.35.t:0 "Go Home, German"
   French_flavour.35.d:0 "Robert's morning walk to the local bakery wasn't much unusual generally. The winding streets of Paris knew a lot of fine bakeries, but the one he went to was generally the best one on his walk to the office. A small little business ran by an old family friend, the pleasant smell of fresh bread was what every morning needed.\n\nHowever, as he approached the bakery, Robert saw commotion through the bakery's window. Among the loafs and pastries, the baker shouted down a single customer, an old man with a cane. As he entered the bakery, Robert understood immediately what the problem was: through a thick, German accent, the old man pleaded with the baker to sell him something, but the baker refused the old man's request. Pointing at the sign at the door, the baker loudly proclaimed: "we do not serve Germans or Jews. Leave this bakery this second before I inform the police about you". Perhaps he was hard of hearing or desperate, but the old man continued to beg. "Please sir, not a single other baker has  allowed me to enter their store. Everything has been closed off to me. Please, find the kindness in your heart, lend to you by Jesus Christ to...", before he could finish, the baker had knocked his cane out of his hand. After a hard drop on the ground, the old man was dragged like a sack of potatoes onto the street.\n\n"Your kind of people don't worship The Lord, so don't even dare to use his name. Find it in the kindness of your heart, lend to you by the kaiser, and fuck off to Germany". The old man laid there for a bit, nobody bothering to help him up. As he struggled to stand on his legs, Robert could not help but feel a bit of sympathy. He may be German, but he was still just an old, confused man, looking for something to eat. Yet Robert did not help. He took his bread, the baker smiling at him during it all, and left. "One man can't change the world", Robert justified to himself."
   French_flavour.35.a:0 "And I'm only one man..."
 
   French_flavour.36.t:0 "The Common Man's France"
-  French_flavour.36.d:0 ""Ah, the Great War", the man Maurice had been interviewing for half an hour at this point took a puff from his cigarette, smoking the place up even more. It had become hard to see in the living room, as thick, gray clouds filled the place. With another cloud of smoke spilling from his lips, the man continued his train of thought.\n\n"As you know, I was conscripted and deployed on the Western Front, alongside a few local friends. None of them returned from the trenches, but I did unfortunately". A quiver of his lips let a small cloud enter the increasingly smoky room. Maurice coughed before asking if the war had affected him, striking a nerve of the man. "Yes it affected me. I would have thunk that some college princess like yourself would have seen that, being so highly educated, or at least claiming to be". Another inhale of the cigarette's smoke followed. "The main thing that left me in this sorry state was the shrapnel in my right leg. Some British plane blew my entire fucking leg open in the last week of the war. Doctors couldn't fix it so they cut it off while I was too high to given consent to such a dumb decision, but alas".\n\nWriting the details down, Maurice finally stood up from the old chair, nearly hitting his head on the low ceiling as the dark smoke clouds made way for his momentum. "You only need to sign these last documents, proving that you are willing to apply to the veteran's program of the government, are a full-blooded Frenchman and a member of the party. With that done, your monthly benefit will come to you". Picking up the pen, the veteran wavered for a bit.\n\nAs the bureaucrat left his house, Michael sat down again and lit a new cigarette. That motherfucker accepted those fake family papers without a second thought. "Full-blooded Frenchman", Michael scoffed. "A Jew like me has more French blood in his toes than Doriot has in his entire body"."
+  French_flavour.36.d:0 ""Ah, the Great War", the man Maurice had been interviewing for half an hour at this point took a puff from his cigarette, smoking the place up even more. It had become hard to see in the living room, as thick, gray clouds filled the place. With another cloud of smoke spilling from his lips, the man continued his train of thought.\n\n"As you know, I was conscripted and deployed on the Western Front, alongside a few local friends. None of them returned from the trenches, but I did unfortunately". A quiver of his lips let a small cloud enter the increasingly smoky room. Maurice coughed before asking if the war had affected him, striking a nerve of the man. "Yes it affected me. I would have thunk that some college princess like yourself would have seen that, being so highly educated, or at least claiming to be". Another inhale of the cigarette's smoke followed. "The main thing that left me in this sorry state was the shrapnel in my right leg. Some British plane blew my entire fucking leg open in the last week of the war. Doctors couldn't fix it so they cut it off while I was too high to given consent to such a dumb decision, but alas".\n\nWriting the details down, Maurice finally stood up from the old chair, nearly hitting his head on the low ceiling as the dark smoke clouds made way for his momentum. "You only need to sign these last documents, proving that you are willing to apply to the veteran's program of the government, and you are a full-blooded Frenchman as well as a member of the party. With that done, your monthly benefit will come to you". Picking up the pen, the veteran wavered for a bit.\n\nAs the bureaucrat left his house, Michael sat down again and lit a new cigarette. That motherfucker accepted those fake family papers without a second thought. "Full-blooded Frenchman", Michael scoffed. "A Jew like me has more French blood in his toes than Doriot has in his entire body"."
   French_flavour.36.a:0 "What makes men French?"
 
   French_flavour.37.t:0 "Frankish Studies"
@@ -986,7 +986,7 @@
 
   French_postwar.1.t:0 "The SP Demand Hannover"
   French_postwar.1.d:0 "A small envelope had reached the general-secretary of German affairs in France today. It clearly detailed the kind demands of the SP for the French government to relinquish control of the Hannover region in Munich Germany to the SP garrisons stationed there. The letter was left rather vague in what the SP would do with the region or what would happen if France refused this request, but seeing that these lands are not of French clay it was 'highly advised' by whoever wrote this letter to simply accept the request."
-  French_postwar.1.a:0 "I'd Rather Avoid A Civil War"
+  French_postwar.1.a:0 "I'd rather avoid a civil war"
 
   French_postwar.2.t:0 "The Piedmont Conference" #Doesn't need loc
   French_postwar.2.d:0 ""
@@ -995,11 +995,11 @@
 
   French_postwar.3.t:0 "Italy Offers Nice"
   French_postwar.3.d:0 "Italy has offered the French state Nice as a compromise to the demands they received. D'annunzio was hesitant to give any more land away as that would have been a 'sign of weakeness' as he wrote to the French ambassador today."
-  French_postwar.3.a:0 "We'll Take What We Can Get"
+  French_postwar.3.a:0 "We'll take what we can get"
 
   French_postwar.4.t:0 "Italy Agrees To Our Demands"
   French_postwar.4.d:0 "The Italian delegation in Rome today approached our ambassador with a dissapointed but understanding attitude. The Italian Social Republic has agreed to our demands, not willing to test our patience and might as they known full well what the French military is capable of.  "
-  French_postwar.4.a:0 "As I Had Expected"
+  French_postwar.4.a:0 "As I had expected"
 
   French_postwar.5.t:0 "The German Liberation Front"
   French_postwar.5.d:0 "With Germany now under a French boot unsurprisingly many have taken hostile action against this fact. Armed raids and terrorist attacks are becoming an often occurrence and collaborators are demanding that we address this issue else we face a full on rebellion."
@@ -1387,24 +1387,43 @@
   PB_FRA_Remilitarize_Lorraine:0 "Remilitarize Lorraine"
   PB_FRA_Remilitarize_Lorraine_desc:0 "For too long the german enforced demilitarization of our eastern lands has been tolerated, with the german people unprepared for war, the time is right to fully enforce our sovereignty!"
   PB_FRA_Befriend_Russia:0 "Befriend Russia"
+  PB_FRA_Befriend_Russia_desc:0 "Whilst Russia may have actively participated in our destruction during the Great War they have started to warm up to us in these recent years. We share some common political ground and both have a distinct desire to watch the empires of both Germany and Britain burn to the ground."
   PB_FRA_Befriend_Spain:0 "Befriend Spain"
+  PB_FRA_Befriend_Spain_desc:0 "Spain for the longest of times has been a valuable ally to France. We have fought many wars together and have seen our once glorious empires be reduced to nothing more that ash. However this shared hatred has only made us stronger."
   PB_FRA_Annex_Brittany:0 "March on Brest"
+  PB_FRA_Annex_Brittany_desc:0 "The creation of Brittany is a national embarrassment to the French people. It is an abomination created by the Anglos following the treaty of Tours. We shall avenge this black mark on French history, by force if necessary."
   PB_FRA_Reintegrate_Brittany:0 "Decimate the Breton Nationalists"
+  PB_FRA_Reintegrate_Brittany_desc:0 "With our liberation of Brittany successful we now have the ardious task of convincing the people who still remain loyal to the government of Mordrel what once was, and what can still be. If they still decide to go with their Anglo inspired ways then we will have to liquidate them and any other conspirators."
   PB_FRA_Strike_at_Wallonia:0 "Demand Wallonia"
+  PB_FRA_Strike_at_Wallonia_desc:0 "Wallonia always has and always will be a core territory of France. Its fundemental existance is a threat to the French nation and it must be wiped off the map if we wish to truely be safe."
   PB_FRA_Reintegrate_Wallonia:0 "Purge the Wallonian Independence Leaders"
+  PB_FRA_Reintegrate_Wallonia_desc:0 "With Wallonia subjugated and pacified the question of what to do with the government officials of the nation has come about. Many are calling for their heads whilst others simply demand we deport them to London. Either way wallonia is now French, whether they like it or not."
   PB_FRA_Greater_France:0 "A Dream of Greater France"
+  PB_FRA_Greater_France_desc:0 "Whilst France has claimed her core integral territories there are still threats all arounder her that threaten the states mere operation. These diseases of Europe must be wiped out off the maps of Europe, it may be a hard task but its a burden France is willing to bear. "
   PB_FRA_Dutch_Crisis:0 "Demand the Continental Netherlands"
+  PB_FRA_Dutch_Crisis_desc:0 "The Dutch have had a long and fruitful friendship with the German Empire, always posing a threat to our nation. We don't know whether they plan on welcoming our regime with open arms or whether they plan on siding with the Germans have they have often done. Better to play it safe and end their presence in Europe to our benefit."
   PB_FRA_Attack_Germany:0 "End the German Hegemony"
+  PB_FRA_Attack_Germany_desc:0 "Of all the threats in Europe there are non greater than that of the Germans and British. They have continously hampered our regimes wishes to enter the global stage and we will take this fact no more, France will be a great power, at any and all costs."
   PB_FRA_Pact_of_Thorns:0 "The Pact of Thorns"
+  PB_FRA_Pact_of_Thorns_desc:0 "While Russia may be hesitant to join the Pacte Revanchiste we may be able to offer them a diplomatic compromise. Instead of joining the allaince both sides will agree to guarantee one another in the case of armed conflict and will pursue no hostile actions against one another as well. Of course the Russians may change their mind in the future but for now we can rest well knowing we have one less enemy in Europe."
   PB_FRA_Alliance_with_Spain:0 "Renew our Spanish Alliance"
-  PB_FRA_Policy_towards_Italy:0 "Policy Towards Italy"
+  PB_FRA_Alliance_with_Spain_desc:0 "With diplomatic relations between France and Spain reaching new heights our minister for foreign relations in Madrid believes now is the time to welcome Spain into the Pacte Revanchiste."
+  PB_FRA_Policy_towards_Italy:0 "Reaffirm Ties With Italy"
+  PB_FRA_Policy_towards_Italy_desc:0 "With D'Annunzio's government successful in the Italian Civil War we should make a diplomatic effort to reaffirm their position in the Pacte Revanchiste. "
   PB_FRA_Technology_Sharing:0 "Expand the Paris Institute"
+  PB_FRA_Technology_Sharing_desc:0 "The Paris Institute is a collection of the Pacte Revanchiste's brightest and greatest minds. It includes scholars, mathemeticians, scientists, and military officials. All who are far beyond the average individuals understanding and capability in modern Europe."
   PB_FRA_Pan_Europeanism:0 "Pan-European Idealism"
+  PB_FRA_Pan_Europeanism_desc:0 "Whilst some may see France as a purely warmongering state these individuals have clearly been blinded by Anglo thought. France only means to redefine Europe, not destroy it."
   PB_FRA_Advisors_Allies:0 "Advisors to Our Allies"
+  PB_FRA_Advisors_Allies_desc:0 "With our nation on the war path the need to make up for our various allies apparently lacking armies is becoming clearer by the day. France must bear the burden of its allies if it wishes to see itself throught this upcoming war."
   PB_FRA_Balkans_Diplomacy:0 "Balkan Diplomatic Initiative"
+  PB_FRA_Balkans_Diplomacy_desc:0 "The Balkans is a region full of war and division. An area ripe for diplomatic exploitation. There is no better an example of this than the kingdom of Greater Serbia and Romania."
   PB_FRA_Support_Colonial_Resistance:0 "Enemies of Our Enemies"
+  PB_FRA_Support_Colonial_Resistance_desc:0 "There are many that live in our enemies backyard that wish for liberation, or at the very least wish to see London and Frankfurt fall. We shall make the best of this fact and funnel arms whever we can to make our enemies break from the inside out."
   PB_FRA_Pan_Francophone_Doctrine:0 "Pan-Francophone Doctrine"
+  PB_FRA_Pan_Francophone_Doctrine_desc:0 "We shall make an effort to rekindle relations with any historically French colonies. These people once belonged to our empire and are as French as any man from Paris to Marseille."
   PB_FRA_Renewed_Spirit_Focus:0 "Renewed National Spirit"
+  PB_FRA_Renewed_Spirit_Focus_desc:0 "With our victory over Europe now realized our openly hostile stance towards to the Anglo-German world can ease. Our goal of a French dominated Europe has been acheived and so now the time for reconstruction and celebration has begun."
   PB_FRA_Develop_Collaborators:0 "Develop the Collaborator States"
   PB_FRA_Develop_Collaborators_Military:0 "Develop the National Armies"
   PB_FRA_Fortress_France:0 "Fortify the Channel"
