Mainly French Focus Loc

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -98,7 +98,7 @@
   PB_Emile_Muselier_Desc:0 ""
 
   ##########################
-  # Focus Tooltips
+  # Tooltips/Country Flags
   ##########################
 
   PB_FRA_Purge_tt:0 "\nIt is time to end this political charade once and for all. Let the disobedient rot, they had no place in Doriot's new France anyway."
@@ -109,6 +109,9 @@
   PB_FRA_A_Helvetica_Coup_tt:0 "§CIf your leader is Charismatic then the chances of the coup succeeding increases§!\n\n"
   PB_FRA_The_Piedmont_Conference_tt:0 "The §YPiedmont Conference§! will commence"
   FRA_military_gov_tt:0 "National Spirits from the previous administration will be removed"
+
+  FRA_SP_IN_POWER:0 "The SP are in power"
+  FRA_SP_IN_POWER:0 "The Military are in power"
 
   ##########################
   # Factionalism/Nationalistic Fervour
@@ -1253,13 +1256,21 @@
   PB_FRA_Assassinate_the_Royals:0 "No More Loose Ends"
 
   PB_FRA_Armandism:0 "Armandism Forever"
+  PB_FRA_Armandism_desc:0 "Armand has given France a second opportunity, a second opportunity to reclaim her lost glory from the Anglo-German threat. For this we are eternally grateful and shall supply Armand with everything we have and everything we got."
   PB_FRA_Emphasize_Class_Struggle:0 "Emphasize the Class Struggle"
+  PB_FRA_Emphasize_Class_Struggle_desc:0 "For far too long the French people have been subjected to a life of misery and poverty with their needs hardly ever addressed by those who promised them greatness. It is time to reverse this social curse and finally set France towards a brighter future."
   PB_FRA_National_Syndicalism:0 "Syndicalisme National"
+  PB_FRA_National_Syndicalism_desc:0 "One of the core beliefs of Armand is the important role of labour unions and their effective position in rebuilding the French economy. By granting these unions special privileges and rights in government we could expect greater results from those under their banner."
   PB_FRA_De_Centralized_Administration:0 "De-Centralized Administration"
+  PB_FRA_De_Centralized_Administration_desc:0 "Regional administrations are largely more effective at dealing with local economies, they can quickly identify potential industrial hickups and have a greater knowledge on what their region can effectively produce and manage. They are also better suited to manage local issues and direct the central government in how to enforce social policies without disturbing the local population too much."
   PB_FRA_Expand_Paramilitaries:0 "Expand Regional Paramilitaries"
+  PB_FRA_Expand_Paramilitaries_desc:0 "The armed forces will be core to France's war effort but to abandon those who still wish to fight for France despite their lacking in military training would be wasted potential. Let us expand the paramilitary garrisons with more soliders and better equipment so that they may plug any gaps that may occur in our frontlines."
   PB_FRA_National_Unions:0 "Comité national des syndicats"
+  PB_FRA_National_Unions_desc:0 "Armand has decided to grant labour unions more autonomy in their daily operations. This includes but is not limited to, who they can choose as representatives, daily quotas, and employement capacity. With these new rights granted to labour unions we can expect to see a sharp improvment in the efficiency of producing goods."
   PB_FRA_Sorelianism:0 "Armandist-Sorelianism"
+  PB_FRA_Sorelianism_desc:0 "Armand owns it to Georges Sorel for her ideas and principles in how she invisioned her perfect France. Sorel was the primary inspiration for Armandism and if he had still been alive today he would have likely praised Armand for her efforts."
   PB_FRA_Revolution_against_Revolution:0 "A Revolutionary against the Revolution"
+  PB_FRA_Revolution_against_Revolution_desc:0 "While some may say that Armand is a revolutionary she would fervently disagree. Instead she believes that her political doctrine while unorthodox to most is simply a natural evolution of the core principles many had once believed in, whether than be social or economical issues. As she states she is a revolutionary against the revolution, whatever that means. "
 
   PB_FRA_Military_Government:0 "The Military in Control"
   PB_FRA_Military_Government_desc:0 "The military has declared absolute control of the French government in a surprise coup today. Blaming the ineffective policies of the previous administration as well as the increasingly pro-SP attitude goverment officials had were argued to be the main reasons for the coup. However, the French military has ensured a swift return to normalcy and that it will continue the revanchist nature of the previous government. "
@@ -1432,9 +1443,13 @@
   PB_FRA_Fortress_France:0 "Fortify the Channel"
   PB_FRA_Fortress_France_desc:0 "The likely region the damn Anglos will invade is the coasts of Normandy. Because of this we should build a series of naval forts, trenches, mines, and tank traps to make the process of naval invasion harder. "
   PB_FRA_Fortress_France_South:0 "Fortify the Côte d'Azur"
+  PB_FRA_Fortress_France_South_desc:0 "The belly of France remains vulnerable to enemy naval invasion; it is the least defended region of France and lacks the fortifications that can be found in other areas of France. To address this issue the French government has granted the regional administration some additional funds to bring the region up to par with the rest of France."
   PB_FRA_Fortress_France_West:0 "Fortify Brittany"
+  PB_FRA_Fortress_France_West_desc:0 "Brittany just like the rest of France is susceptible to enemy invasion and occupation. While the region already has fortifications thanks to the once in power Breton government many of these are outdated and are lacking essential military requirements."
   PB_FRA_Fortress_Europe:0 "Forteresse Europe"
+  PB_FRA_Fortress_Europe_desc:0 "With much of Europe under our control it has become vitally important that we ward off any potential Anglo invasions. All we have to do is sit and wait for the enemy to come and if they do then god help them all."
   PB_FRA_War_Devotion:0 "Devotion to the War Effort"
+  PB_FRA_War_Devotion_desc:0 "Our population must be dedicated to the war effort, if they love France and wish for her to return to the global stage then they must sacrifice their all for the betterment of our nation and arguably Europe as a whole."
 
   PB_FRA_Reform_Military:0 "Reform the Military"
   PB_FRA_Reform_Military_desc:0 "The state of the French military is... lacking. Reports indicate gridlock among top leaders. In the army, generals squabble among each other, willing to cut throats instead of work together. The admirality is divided on how to use the navy, and the French air force is laughable. We must investigate this further lest we embarrass ourselves further."
@@ -1568,11 +1583,17 @@
   PB_FRA_Increase_Bomber_Development_Funding:0 "Increase Bomber Development Funding"
   PB_FRA_Increase_Bomber_Development_Funding_desc:0 "If we plan on relying on bombers to do the heavy work in our pursuit of enemy annihilation then they best get top of the line tech. Any perceived faults will be exploited by our enemies and will hinder our aerial capabilities."
   PB_FRA_Increase_Heavy_Fighter_Development_Funding:0 "Increase Heavy Fighter Development Funding"
+  PB_FRA_Increase_Heavy_Fighter_Development_Funding_desc:0 "Heavy fighters will be crucial in protecting our bomber squadrons from enemy air craft. Because of our dependence on heavy fighters we will have to provide additional funding to make sure that they receive every conceivable advantage."
   PB_FRA_Air_Games:0 "Air Games"
+  PB_FRA_Air_Games_desc:0 "A good way to test our theories in air combat is by conducting air games and fake skirmishes. We shall grant the airforce a plot of land and some minor funding so they may practise these theories."
   PB_FRA_Increase_Production_Capabilities:0 "Increase Production Capabilities"
+  PB_FRA_Increase_Production_Capabilities_desc:0 "Since we have decided to tie ourselves towards the production of larger aircraft more of our industry demands new parts and materials at a rate we hadn't accounted for. We shall expand existing aircraft production facilities to address these shortcomings."
   PB_FRA_Bombs_Away:0 "Bombs Away"
+  PB_FRA_Bombs_Away_desc:0 "Our high command believes that we can best destroy our enemies by decimating their homes and industry with a policy of 'no mercy'. This should break our enemies spirit to continue fighting and at the very least prevent them from doing so."
   PB_FRA_Devastate_Their_Lands:0 "Devastate Their Lands"
+  PB_FRA_Devastate_Their_Lands_desc:0 "Each bomb that hits its target can be considered in some way, no matter how insignificant the target is, to be helping the war effort. Every crater we live is on the enemy has to deal with and one less stretch of land we need to occupy."
   PB_FRA_Barons_Of_Hell:0 "Barons Of Hell"
+  PB_FRA_Barons_Of_Hell_desc:0 "After every successful bombing campaign we conduct all that will be left of our enemies will be ash and rubble. They will curse our names and pray for gods forgiveness but when were done, there will be nobody to listen to their prays."
 
   PB_FRA_A_New_World_Order:0 "A New World Order"
   PB_FRA_A_New_World_Order_desc:0 "The Earth in all her beauty and magnificence laid no different to a desecrated corpse; bloody, beaten, and bruised. Yet in all that destruction and death beauty once again emerged, instead of green fields and busy urban streets it had altered itself into something new, in its infancy it may have even been unrecognizable but now we all know what it had become, war, along with all its human made inventions. "
@@ -1612,6 +1633,7 @@
 
 
   PB_FRA_The_State_That_Gives:0 "The State That Gives"
+  PB_FRA_The_State_That_Gives_desc:0 "With Doriot's political presence secured and the French economy improving he has now found it necessary to implement the once promised welfare he has spouted to the French public."
 
   PB_FRA_The_End_Of_Time:0 "The End Of Time"
   PB_FRA_The_End_Of_Time_desc:0 "With hostile troops slowly advancing into core French territory we must embark on a grand campaign, one that will mainly see the defence of France, then-followed by the defeat of her enemies. Whilst resources are scarce and our reserves already mobolized we must have hope that victory is possible, else we may face another embarrassing defeat from the British and Germans, once again.\n\n"We can hear the sounds of war, and all the unpleasantries we had forgot about long ago. Ready your sons, for war is coming home." - Unknown French Officer"
@@ -1626,23 +1648,33 @@
   PB_FRA_Scorched_Earth_Tactics:0 "Scorched Earth Tactics"
   PB_FRA_Scorched_Earth_Tactics_desc:0 "Everyday the horde kreeps closer and closer to our rump territories, barely held with tape at this point. But there is hope, if one could call it that. Secret legions stationed behind enemy lines have been increasingly ferocious in their efforts to bomb occupied infrastructure and if we could cordinate with the soldiers on where to allocate their restricted reserves of explosive material then we might be able to turn this damn war around."
   PB_FRA_Mobolize_The_Militias:0 "Mobolize The Militias"
+  PB_FRA_Mobolize_The_Militias_desc:0 "With our army now severly lacking in men fit for service we find it neccesary to mobolize whoever we can in the defense of France. Anyone who can shoot a gun can in some way prevent the enemy from closing in."
   PB_FRA_Child_Soliders:0 "Child Soldiers"
+  PB_FRA_Child_Soliders_desc:0 "Most of our war capable manpower has been depleted and finding young men fit for service is a task near impossible. However, we have an abundance of young children who are ready and eager to take the fight to the enemy."
   PB_FRA_Cutting_Corners:0 "Cutting Corners" 
   PB_FRA_Cutting_Corners_desc:0 ""Let me have a look at this.\n Remove the bayonet log no soldier is forced to do a charge anymore. Also remove the cleaning rod, our soldiers life expectancy is already low enough that it is quite unlikely that they ever need to clean their rifle. Let's see... why do we actually go through such a long process to create lamented wood? Just use raw wood. And make this smaller, remove this, the soldiers do not need it anymore anyway. Forget about drilling a hole there honestly the rifle is good enough. Good enough to kill."" 
   PB_FRA_Do_Or_Die:0 "Do Or Die"
+  PB_FRA_Do_Or_Die_desc:0 "With most of our military personal dead, hiding, or captured we have resorted to human wave offensives as our primary way of defeating enemy forces. Most of the time these units lack anti-armour weaponary and simply have to improvise if they actually make it close enough to a tank or mech."
   PB_FRA_Green_Clouds_Over_France:0 "Drugs And Desperation"
   PB_FRA_Green_Clouds_Over_France_desc:0 "I hate the Germans\n I hate the British\n I hate the Italians\n Victory shall come... France shall survive\n France must survive\n We just have to defeat them all\n Kill...KILL THEM ALL"
   PB_FRA_Foreign_Forces:0 "Foreign Forces"
+  PB_FRA_Foreign_Forces_desc:0 "Surprisingly a good portion of our still operational armed forces originate from collaborator units from Germany and the Lowlands. One would think that these armies would have deserted long ago but they have dedicated themselves to French ideals and remain as ever loyal as the day they were formed."
   PB_FRA_Emergency_Fortifications:0 "Emergency Fortifications"
   PB_FRA_Emergency_Fortifications_desc:0 "The Enemy needs to bleed, he needs to fight for every single piece of land we control.\n To make sure that our soldiers can accomplish this duty with high chances of success they need to fortify everywhere they desire. Dig trenches in those fields, build up sandbags at those street corners and do not forget to plant the hidden bombs underneath the floor. The weakling will fear more and more for their lives for every step they take."
   PB_FRA_Super_Weapon_Theories:0 "Super Weapon Theories" 
+  PB_FRA_Super_Weapon_Theories_desc:0 "Some members in our inner circle reckon that the concept of nuclear power is actually achievable and not just science fiction. Whether these fools have realized that we don't have the resources to fund such a venture is besides the point, we are desperate and anything right now can be considered helpful in preventing our defeat." 
   PB_FRA_Mythical_Stories:0 "Mythical Stories"
   PB_FRA_Mythical_Stories_desc:0 "The Frenchmen is like no other man on Earth, a direct ascendent of the holy angel of christ. He is blessed, disciplined, and unmatched by his so-called 'fellow human', but he is beyond human in so many ways. His skin is pure white, and his mind full of knowledge, he is both Adam and Noah; bringer of civilization and forebearer of a brave new world. May God bless his soul, because he is going to need one hell of a fucking miracle to win this war."
   PB_FRA_Sons_Of_Charlemagne:0 "Sons Of Charlemagne"
+  PB_FRA_Sons_Of_Charlemagne_desc:0 "We must inspire whatever little faith our troops still have have to continue the fight against our enemies. We could tap in the the stories of old about Charlemagne which might raise the morale of troops, hopefully."
   PB_FRA_Do_It_For_France:0 "Do It For France"
+  PB_FRA_Do_It_For_France_desc:0 "Of all the worries one may have about the approaching hostile forces none should be greater than that of the defeat of France. The nations history lays on the shoulders of these defenders and they now bear the responsiblity of continuing its legacy."
   PB_FRA_Hold_The_Line:0 "Hold The Line"
+  PB_FRA_Hold_The_Line_desc:0 "The enemy march through our towns and cities with little resistance and the remaining military high command is furious over this fact. Let our men know the consequences of desertion or front line abandonment."
   PB_FRA_Not_One_Step_Back:0 "Not One Step Back"
+  PB_FRA_Not_One_Step_Back_desc:0 "The French government has enforced a new decree today which states that traitors or deserters are to be shot on site. We must instill a sense of fear into these soldiers if we expect them to fight for a dying cause."
   PB_FRA_Redout_Plan_Piedmont:0 "Redoubt Plan: §RSavoy§!"
+  PB_FRA_Redout_Plan_Piedmont_desc:0 "The Rhone mountains are our last bastion of hope if we plan on winning this war. We must hold these mountains at any cost if we plan to see this conflict out. Who are we kidding we are dead men who have tied ourselves to a false regime, may god have mercy on our souls."
 
   ##########################
   # FRENCH DECISIONS
@@ -1737,8 +1769,10 @@
   PB_FRA_Our_Promise_To_Keep:0 "Our Promise To Keep"
 
   PB_FRA_Approaching_Corsica:0 "Approaching Corsica"
+  PB_FRA_Approaching_Corsica_desc:0 "The royal house of Bonarparte had seized Corsica from French possesion following the exile of the Bourbon royal family during Doriot's ascension to power. The so called 'Saviour of France', Napoleon VI as proclaimed a French government in exile and it is our duty to restore French control over this region."
 
   PB_FRA_The_Apurdi_Situation:0 "The Apurdi Situation"
+  PB_FRA_The_Apurdi_Situation_desc:0 "Apurdi was granted to the Basque Republic following the Treaty of Tours. The British argued that it was to ensure the safety of the local population who identified as Basquan however, we know that such a statement was simply made to weaken France. The time has now come to reverse this foolish Anglo mistake."
 
   PB_FRA_the_new_european_system:0 "The New European System"
   PB_FRA_the_new_european_system_desc:0 "\n\n\n\n\n\nWith much of Europe now under our thumb the time to rebuild has come. Whilst these lands may have once belonged to our enemies we must convince these now occupied people that we are their liberators, not their enemies. Funding from France's own pocket will aid in these proposed development programs and hopefully we can restore much of the destroyed or damaged infrastructure that the war caused."
